account repository & composable & main to account

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PPP</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_account_test">AccountTestActivity</string>
+    <string name="title_activity_account_record_test">AccountRecordTestActivity</string>
 </resources>
