--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="title_activity_account_test">AccountTestActivity</string>
     <string name="title_activity_account_record_test">AccountRecordTestActivity</string>
 
-    <string name="deeplink_scheme">ppp</string>
+    <string name="deeplink_scheme">com.dirtfy.ppp</string>
     <string name="deeplink_host">account_record</string>
 </resources>
