--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="deeplink_host">account_record</string>
 
 
-    <!--AccountCreateScreen && TableScreen-->
+    <!--AccountCreateScreen && TableScreen && AccountScreen-->
     <string name="new_account">새 계정</string>
     <string name="account_number">계정 번호</string>
     <string name="account_name">계정 이름</string>
@@ -30,7 +30,7 @@
     <string name = "price">가격</string>
     <string name = "count">수량</string>
 
-    <!--TableScreen-->
+    <!--TableScreen & Component-->
     <string name="select_table">테이블을 선택해주세요</string>
     <string name="ok">확인</string>
     <string name="cancel">취소</string>
@@ -40,5 +40,8 @@
     <string name="card">카드</string>
     <string name="total">통계:</string>
 
+    <!--Component-->
+    <string name="retry">재시도</string>
+    <string name="unknown_error">알 수 없는 오류</string>
 
 </resources>
