--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,42 @@
 
     <string name="deeplink_scheme">com.dirtfy.ppp</string>
     <string name="deeplink_host">account_record</string>
+
+
+    <!--AccountCreateScreen && TableScreen && AccountScreen-->
+    <string name="new_account">새 계정</string>
+    <string name="account_number">계정 번호</string>
+    <string name="account_name">계정 이름</string>
+    <string name="phone_number">휴대폰 번호</string>
+    <string name="add">추가</string>
+
+    <!--AccountDetailScreen && TableScreen -->
+    <string name="issued_by">발행자</string>
+    <string name="difference">금액</string>
+    <string name="empty_list">목록이 비어있습니다</string>
+
+    <!--MenuScreen-->
+    <string name="new_menu">새 메뉴</string>
+    <string name="menu_name">메뉴 이름</string>
+    <string name="menu_price">메뉴 가격</string>
+    <string name="add_menu">메뉴 추가</string>
+    <!--RecordDetailScreen && TableScreen-->
+    <string name = "name">이름</string>
+    <string name = "price">가격</string>
+    <string name = "count">수량</string>
+
+    <!--TableScreen & Component-->
+    <string name="select_table">테이블을 선택해주세요</string>
+    <string name="ok">확인</string>
+    <string name="cancel">취소</string>
+    <string name="merge">합석</string>
+    <string name="cash">현금</string>
+    <string name="point">포인트</string>
+    <string name="card">카드</string>
+    <string name="total">통계:</string>
+
+    <!--Component-->
+    <string name="retry">재시도</string>
+    <string name="unknown_error">알 수 없는 오류</string>
+
 </resources>
