--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
     <!--Component-->
     <string name="retry">재시도</string>
     <string name="unknown_error">알 수 없는 오류</string>
+    <string name="internet_connection_fail">네트워크에 연결되어있지 않습니다.</string>
 
 </resources>
