--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="select_table">테이블을 선택해주세요</string>
     <string name="ok">확인</string>
     <string name="cancel">취소</string>
-    <string name="merge">합석</string>
+    <string name="merge">착석</string>
     <string name="cash">현금</string>
     <string name="point">포인트</string>
     <string name="card">카드</string>
